--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -1,6 +1,7 @@
 @import "../../colormap.scss";
 
 .page-skills {
-  height: 400px;
-  background-color: #700;
+  height: 1400px;
+  background-color: $black1;
+  position: inherit;
 }
