--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -1,6 +1,7 @@
 @import "../../colormap.scss";
 
 .page-projects {
-  height: 400px;
-  background-color: rgb(39, 178, 202);
+  height: 1400px;
+  background-color: $black1;
+  position: inherit;
 }
