--- a/src/normalize.scss
+++ b/src/normalize.scss
@@ -3,7 +3,9 @@
 *::after {
   box-sizing: border-box;
 }
-
+::-webkit-scrollbar {
+  width: 0;
+}
 ul[class],
 ol[class] {
   padding: 0;
@@ -56,12 +58,4 @@ button,
 textarea,
 select {
   font: inherit;
-}
-@media (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
 }
