--- a/src/colormap.scss
+++ b/src/colormap.scss
@@ -1,10 +1,10 @@
-$black1: #1a1a1a;
+$black1: #222831;
 $black2: #0e0e0e;
 
 $gray1: #3e3e3e;
 
 $cyan: #7dc4ae;
 
-$white1: #e2e2e2;
+$white1: #dddddd;
 $white2: #e9e9e9;
 $white3: #dfdfdf;
