--- a/src/normalize.scss
+++ b/src/normalize.scss
@@ -1,3 +1,4 @@
+@import "./colormap.scss";
 *,
 *::before,
 *::after {
@@ -33,6 +34,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background-color: $black1;
 }
 
 ul[class],
@@ -58,4 +60,8 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+html {
+  font-size: 18px;
 }
